Bug 1803233 - Don't check whether the global has been fully initialized when checking whether it is live r=nbp

We depend on the realm living at least as long as the global so that the
global's data can get freed in Realm::traceWeakGlobalEdge. The change in bug
1219128 breaks this by allowing the realm to die if there is a global that
isn't fully initialised, because hasLiveGlobal() will return false.

The patch adds a separate method to check for whether the global is present and
initialized.

Differential Revision: https://phabricator.services.mozilla.com/D163577