js/src/jit-test/tests/gc/bug-1803233.js
@@ -1,0 +1,5 @@
+// |jit-test| allow-oom; allow-unhandlable-oom
+
+gczeal(10, 1);
+gcparam("maxBytes", gcparam("gcBytes"));
+newGlobal();
